# smart-home

./: .dockerignore  .editorconfig  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  azure-pipelines.yml  codecov.yml  docker-compose.yml  main.py  manage.py  prestart.sh  pyproject.toml  requirements.txt  rsync.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  onCreateCommand.sh  postCreateCommand.sh
.github/: dependabot.yml  labeler.yml  release-drafter.yml  renovate.json  renovate.json5
.github/workflows/: codeql-analysis.yml  deploy.yml  main.yml
board/: admin.py  apps.py  models.py  schema.py  tests.py
board/fixtures/: board.json
board/migrations/: 0001_initial.py
docker/: gunicorn_conf.py  start.sh
docker/emqx/: configuration  configuration.env
docker/postgres/: Dockerfile
home/: asgi.py  celery.py  schema.py  settings.py  tests.py  urls.py  utils.py  wsgi.py
home/board/: __init__.py  admin.py  apps.py  models.py  mutations.py  schema.py  tests.py  types.py  utils.py
home/board/fixtures/: board.json
home/board/migrations/: 0001_initial.py  0002_add_is_pin.py  0003_rename_field.py  0004_add_closed_at.py  0005_remove_mptt.py  0005_rename_topic_is_pinned_is_closed.py  0006_remove_comment_level_remove_comment_lft_and_more.py
home/iot/: __init__.py  admin.py  api.py  apps.py  models.py  mutations.py  schema.py  tasks.py  tests.py  types.py  urls.py  views.py
home/iot/fixtures/: iot.json
home/iot/migrations/: 0001_initial.py  0002_auto_20200718_1154.py  0003_rename_field.py  0004_add_index_time.py  0005_mqtt_auth.py  0005_mqttacl_mqttuser.py  0006_do_not_allow_null.py  0007_add_autowatering_data_daily.py  0008_delete_mqttacl.py  0009_rename_password_device_token.py
home/iot/mock/: weather.shtml
home/push/: __init__.py  admin.py  apps.py  models.py  mutations.py  schema.py  tasks.py  tests.py  types.py
home/push/fixtures/: push.json  push_disabled.json
home/push/migrations/: 0001_initial.py  0002_mipush_reg_id.py  0003_device_id_model.py  0004_do_not_allow_null.py
home/push/mipush/: APIConstants.py  APIError.py  APIHostSwitch.py  APIMessage.py  APISender.py  APISenderBase.py  APISubscribe.py  APITools.py
home/settings/: __init__.py  development.py  production.py  settings.py  testing.py
home/storage/: __init__.py  admin.py  apps.py  models.py  mutations.py  schema.py  tests.py  types.py
home/storage/fixtures/: storage.json
home/storage/migrations/: 0001_initial.py  0002_item_date_added.py  0003_logical_delete.py  0004_item_consumables.py  0005_edited_at_not_auto_now.py  0006_do_not_allow_null.py  0007_add_consumable_number.py  0007_add_picture.py  0008_change_price_to_float.py  0009_remove_mptt.py  0009_remove_name_unique_constraint.py  0009_remove_storage_level_remove_storage_lft_and_more.py  0010_storage_name_ordering.py
home/users/: admin.py  apps.py  middleware.py  models.py  mutations.py  schema.py  tasks.py  tests.py  types.py
home/users/fixtures/: users.json
home/users/management/commands/: clearsessions.py
home/users/migrations/: 0001_initial.py  0002_add_config.py  0003_session.py  0004_alter_session_user.py  0005_alter_session_user_agent.py
home/xiaoai/: __init__.py  apps.py  tests.py  urls.py  views.py
iot/: admin.py  api.py  models.py  schema.py  tasks.py  tests.py  urls.py  views.py
iot/fixtures/: iot.json
postgres/: Dockerfile
push/: __init__.py  admin.py  apps.py  models.py  schema.py  tasks.py
push/migrations/: 0001_initial.py  0002_mipush_reg_id.py
push/mipush/: APIHostSwitch.py  APISender.py
storage/: __init__.py  admin.py  forms.py  models.py  schema.py  tests.py  urls.py  views.py
storage/fixtures/: storage.json  tests.json  user.json
storage/migrations/: 0001_initial.py  0001_postgresql.py  0002_auto_20200217_1757.py  0002_item_date_added.py  0003_item_description.py  0004_mptt.py  0005_mptt_rebuild.py  0006_add_price_field_and_ordering_by_name.py  0007_auto_20200223_0011.py  0008_auto_20200223_1017.py
storage/templates/storage/: add_item.html  add_storage.html  alerts_snippet.html  base.html  change_item.html  change_storage.html  delete_item.html  delete_storage.html  error_message_snippet.html  form_snippet.html  index.html  item_detail.html  latest.html  search.html  storage_detail.html
storage/templatetags/: storage_extras.py
users/: schema.py  tests.py
users/fixtures/: users.json
xiaoai/: __init__.py  views.py
