[project]
name = "smart-home"
version = "0.9.6"
description = "Smart home."
dependencies = [
    "django>=5.0.6",
    "strawberry-graphql-django[debug-toolbar]>=0.46.1",
    "channels>=4.1.0",
    "channels-redis>=4.2.0",
    "celery>=5.4.0",
    "django-celery-beat>=2.6.0",
    "django-cleanup>=8.1.0",
    "django-mptt>=0.16.0",
    "boto3>=1.34.140",
    "markdown>=3.6",
    "pillow>=10.4.0",
    "psycopg[binary]>=3.2.1",
    "sentry-sdk>=2.8.0",
    "geoip2>=4.8.0",
    "httpx>=0.27.0",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.12, < 3.13"

[project.urls]
Homepage = "https://github.com/he0119/smart-home"
Repository = "https://github.com/he0119/smart-home.git"
Issues = "https://github.com/he0119/smart-home/issues"
Changelog = "https://github.com/he0119/smart-home/blob/master/CHANGELOG.md"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "coverage>=7.5.4",
    "django-cors-headers>=4.4.0",
    "eventlet>=0.36.1",
    "daphne>=4.1.2",
]

[tool.rye.scripts]
test = "pytest --cov=src --cov-report xml -n auto"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["home/push/mipush"]

[tool.ruff.lint]
select = [
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
]
ignore = [
    "E402", # module-import-not-at-top-of-file, Module level import not at top of cell
]

[tool.coverage.report]
omit = [
    "*/migrations/*",
    "*/admin.py",
    "home/push/mipush/*",
    "home/settings",
    "manage.py",
]
