[project]
name = "smart-home"
version = "0.9.6"
description = "Smart home."
authors = [{ name = "uy_sun", email = "hmy0119@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.12"
dependencies = [
  "django>=5.1.3",
  "strawberry-graphql-django>=0.50.0",
  "channels==4.1.0",
  "channels-redis[cryptography]>=4.2.1",
  "celery>=5.4.0",
  "django-celery-beat>=2.7.0",
  "django-cleanup>=9.0.0",
  "django-mptt>=0.16.0",
  "boto3>=1.35.73",
  "markdown>=3.7",
  "pillow>=11.0.0",
  "psycopg[binary]>=3.2.3",
  "sentry-sdk>=2.19.0",
  "geoip2>=4.8.1",
  "httpx>=0.28.0",
  "uvicorn[standard]>=0.32.1",
  "gunicorn>=23.0.0",
  "uvicorn-worker>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/he0119/smart-home"
Repository = "https://github.com/he0119/smart-home.git"
Issues = "https://github.com/he0119/smart-home/issues"
Changelog = "https://github.com/he0119/smart-home/blob/main/CHANGELOG.md"

[tool.uv]
dev-dependencies = [
  "coverage>=7.6.8",
  "django-cors-headers>=4.6.0",
  "eventlet>=0.38.0",
  "daphne>=4.1.2",
  "strawberry-graphql-django[debug-toolbar]>=0.50.0",
  "poethepoet>=0.31.1",
  "bump-my-version>=0.28.1",
]

[tool.uv.pip]
universal = true

[tool.poe.tasks]
test = ["test:run", "test:report"]
"test:run" = "coverage run manage.py test --no-input"
"test:report" = "coverage xml"
loaddata = "python manage.py loaddata"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
bump = "bump-my-version bump"
show-bump = "bump-my-version show-bump"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["home/push/mipush"]

[tool.ruff.lint]
select = [
  "W",   # pycodestyle warnings
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "DJ",  # flake8-django
  "Q",   # flake8-quotes
  "TC",  # flake8-type-checking
  "RUF", # Ruff-specific rules
  "I",   # isort
]
ignore = [
  "E402",   # module-import-not-at-top-of-file, Module level import not at top of cell
  "E501",   # line too long
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "RUF012", # mutable-class-default
]

[tool.coverage.report]
omit = [
  "*/migrations/*",
  "*/admin.py",
  "home/push/mipush/*",
  "home/settings",
  "manage.py",
]

[tool.bumpversion]
current_version = "0.9.6"
commit = true
message = "chore(release): {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]"
replace = "[Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
regex = true
search = "\\[unreleased\\]: (https://.+?)v{current_version}\\.\\.\\.HEAD"
replace = "[unreleased]: \\1v{new_version}...HEAD\n[{new_version}]: \\1v{current_version}...v{new_version}"
